# Yuuko

./: .dockerignore  .env  .gitignore  .prettierrc  Dockerfile  LICENSE  README.md  TODO.md  app.js  app.ts  bun.lockb  changes.diff  codegen.yml  config.json  docker-compose.yml  drizzle.config.ts  drizzle.stats.config.ts  ecosystem.config.cjs  ecosystem.config.js  entrypoint.sh  environment.d.ts  eslint.config.js  jsconfig.json  mycron  package-lock.json  package.json  start.sh  tsconfig.json  update.sh
Caching/: CacheTypes.js  CacheTypes.ts  Caching.js  Caching.ts
Checks/: Run.js  Run.ts  VerifyEnv.ts  VerifyRSA.js  VerifyRSA.ts
Commands/: activity.js  activity.ts  airing.js  airing.ts  anime.js  anime.ts  announcement.js  announcement.ts  auth.js  auth.ts  birthday.js  birthday.ts  changelog.js  changelog.ts  character.js  character.ts  help.js  help.ts  iam.js  logs.js  logs.ts  makeactivity.js  makeactivity.ts  manga.js  manga.ts  news.js  news.ts  nhentai.js  ping.js  ping.ts  recent.js  recent.ts.txt  recommend.js  rss.json  rss.xml  say.js  staff.js  staff.ts  stats.js  stats.ts  (+7 more)
Components/: annModal.js  annModal.ts
Database/: db.js  db.sqlite  db.ts  index.ts
Events/: interactionCreate.js  interactionCreate.ts  messageCreate.js  ready.js  ready.ts
GraphQL/: Activity.gql  Airing.gql  Anime.gql  Character.gql  GetMediaCollection.gql  ListQuery.gql  Manga.gql  MediaList.gql  RecentChart.gql  Recommendations.gql  (+6 more)
src/modules/: Cargo.toml  README.md  build.sh  go.mod  go.sum  image.go  image.ts
src/modules/src/: lib.rs  recent_image.rs  statics.rs
(+263 files in other folders)
