[package]
name = "modules"
version = "0.0.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]}
imageproc = "0.25.0"
image = "0.25.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
ab_glyph = "0.2.29"

[lib]
crate-type = ["cdylib"]