[package]
name = "modules"
version = "0.0.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]}
imageproc = "0.25.0"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }
ab_glyph = "0.2.29"
anyhow = "1.0.98"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["cdylib"]